01/10 백엔드회의 - AI(D-ID) 요청,응답 로직 설계

--- a/documents/회의록/20240110.md
+++ b/documents/회의록/20240110.md
@@ -7,11 +7,12 @@ status: In progress
     - `POST`에 사진 URL과 대사를 담아서 요청하면 D-ID에서 `id`를 리턴
     - `GET` 요청으로 해당 `id` 를 조회해서 완성된 영상을 가지고 옴
     
-    ![Untitled](%E1%84%92%E1%85%AC%E1%84%8B%E1%85%B4%E1%84%85%E1%85%A9%E1%86%A8(%E1%84%87%E1%85%A2%E1%86%A8%E1%84%8B%E1%85%A6%E1%86%AB%E1%84%83%E1%85%B3)%201bc4f65ce87f4b4e8864ffd1b893c9f0/Untitled.png)
+    <img width="521" alt="image" src="https://github.com/tukcomCD2024/SnowBall/assets/106878778/43e1e890-8459-49ba-bd8b-75639080f1e8">
+
     
 - 사진이랑 대사 목소리를 list로 받는게 맞다.
 
-![Untitled](%E1%84%92%E1%85%AC%E1%84%8B%E1%85%B4%E1%84%85%E1%85%A9%E1%86%A8(%E1%84%87%E1%85%A2%E1%86%A8%E1%84%8B%E1%85%A6%E1%86%AB%E1%84%83%E1%85%B3)%201bc4f65ce87f4b4e8864ffd1b893c9f0/Untitled%201.png)
+    <img width="546" alt="image" src="https://github.com/tukcomCD2024/SnowBall/assets/106878778/8b3c8e95-e758-44ee-bda0-501997f5649f">
 
 - 추후 회의 내용
     - issue, PR, 코드리뷰 설정 논의
