01/11 전체회의 - 이슈, PR 템플릿, 지라 백로그 작성 수정

--- a/documents/회의록/20240111.md
+++ b/documents/회의록/20240111.md
@@ -11,9 +11,7 @@
 ---
 
 ## 메시지 큐 위치
-
-![전체 기능별 모듈 설계.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/a2af40ea-c8d3-495d-9782-ae75f6f36207/1170d015-42c0-4c87-a794-34d65efe7de6/%E1%84%8C%E1%85%A5%E1%86%AB%E1%84%8E%E1%85%A6_%E1%84%80%E1%85%B5%E1%84%82%E1%85%B3%E1%86%BC%E1%84%87%E1%85%A7%E1%86%AF_%E1%84%86%E1%85%A9%E1%84%83%E1%85%B2%E1%86%AF_%E1%84%89%E1%85%A5%E1%86%AF%E1%84%80%E1%85%A8.png)
-
+<img width="614" alt="image" src="https://github.com/tukcomCD2024/SnowBall/assets/116789976/e0608e33-19ba-4824-b210-ad4ee4334846">
 - APP 과 밈 생성 서버 사이에 두면, 요청이 밈 생성 Server에 도달하지 못하면 APP은 응답을 받지 못할 수 있기 때문
 - WAS 서버에서 요청을 받고 응답을 보낸 후, AI 서버가 완료되면 FCM을 통해 메시지를 보내는 형식으로 설계
 
@@ -34,9 +32,7 @@
         - `Android`
 - git 템플릿 설정 완료
 - 커밋 규칫
-    
-    ![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/a2af40ea-c8d3-495d-9782-ae75f6f36207/4ab4311d-c470-4fbf-a583-dec051b9cb48/Untitled.png)
-    
+<img width="584" alt="image" src="https://github.com/tukcomCD2024/SnowBall/assets/116789976/9911b7a8-c86b-4933-98dc-0b4991249ce0">
     - `[#이슈번호] 구현한 기능`
     - 메소드 단위로 commit
 
