01/31 스크럼 회의록 작성

--- a/documents/회의록/20240130.md
+++ b/documents/회의록/20240130.md
@@ -1,16 +1,18 @@
 # [스크럼] 회의록
 
-날짜: 2024년 1월 30일
+status: Not started
+날짜: 2024년 1월 31일
+
+날짜: 2024년 1월 31일
 
 status: In progress
-
 
 ### Backend
 
 - 이준우
-    - flask와 faceswap 결합
+    - faceswap 코드 간결화
 - 강재혁
-    - faceswap 향상법 찾기
+    - spring boot 초기 세팅
 
 ### Android
 
@@ -18,5 +20,4 @@ status: In progress
 
 ### iOS
 
-- Loigin UI 구현
-- ++ 시간 남으면 Guide UI 구현
+- Tutorial UI 구현
