--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Memetory</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="splash_title">나만의 밈 영상\n제작 서비스</string>
+    <string name="tutorial_first_title">원하는 템플릿을 선택하고</string>
+    <string name="tutorial_second_title">얼굴, 목소리, 대사를 입력하면?</string>
+    <string name="tutorial_third_title">나만의 밈 완성!</string>
+    <string name="nickname_title">자신만의 닉네임을\n입력해주세요!</string>
 </resources>
