[#6] SignUp UI(닉네임 입력)만 구성

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="nickname_title">자신만의 닉네임을\n입력해주세요!</string>
     <string name="auth_google">Google 계정으로 로그인</string>
     <string name="auth_kakao">카카오 로그인</string>
+    <string name="sign_up_title">자신만의 닉네임을\n입력해주세요!</string>
+    <string name="sign_up_hint">한글, 영어, 숫자로 구성할 수 있어요</string>
+    <string name="sign_up_nickname">닉네임</string>
+    <string name="button_confirm">확인</string>
 </resources>
