--- a/documents/회의록/20240318.md
+++ b/documents/회의록/20240318.md
@@ -46,4 +46,4 @@ status: Not started
 - 승진
     - iOS S3 연결
 
-![Untitled](%5B%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A5%E1%86%B7%5D%20%E1%84%92%E1%85%AC%E1%84%8B%E1%85%B4%E1%84%85%E1%85%A9%E1%86%A8%2042e7bc939b154e1da6d21b2fceff5527/Untitled.png)
+<img width="526" alt="image" src="https://github.com/tukcomCD2024/SnowBall/assets/106878778/1aa85257-4d4d-49b4-a05b-954f9683f1ce">
